The selection lists in the member energy company could be inherited, or defined by themselves.